<resources>
    <string name="credentials">Provide credentials</string>
    <string name="app_name">Suavy Home Automation</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="signin_text">Login</string>
    <string name="signup_text">Create new account</string>
    <string name="address_details">Fill address details</string>
    <string name="logout_text">Log out</string>
    <string name="user_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="add_line1">House no/ Apartment no</string>
    <string name="add_line2">Street/ Area/ Colony</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="country">Country</string>
    <string name="product_key">Product key</string>
    <string name="go_to_login"><u>Already have an account? Sign up instead.</u></string>
    <string name="go_to_signup">Dont have an account? Create one!</string>
    <string name="login_account_text">Login to your account!</string>
    <string name="central_module_name">Smartdom</string>
    <string name="spinner_text">Change room</string>
    <string name="delete_text">Delete room</string>
    <string name="rename_text">Rename room</string>
    <string name="create_room">Create room</string>
    <string name="add_central_module_text">Add new Smartdom</string>
    <string name="edit_smartdom_name">Edit title</string>
    <string name="create_new_room">Create room</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="otp_not_received">Not received your code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="nav_to_signin">navigate to login page</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_btn">Send password reset email</string>
    <string name="central_module_update_dialog_text">"Enter name of the central module"</string>
    <string name="update_switch_board">Update switch board</string>
    <string name="smartdom_transition">Smartdom transition</string>
    <string name="step1">Step 1 of 4: Verify your phone number</string>
    <string name="step2">Step 2 of 4: Enter OTP received on your phone</string>
    <string name="step3">Step 3 of 4: Enter personal information</string>
    <string name="step4">Step 4 of 4: Create new credentials</string>
    <string name="signup_dialog_text">Please verify your email through the verification link shared with you on email and login using the same credentials.</string>
    <string name="LoginUsingGoogle">Login using Google</string>
    <string name="address">Address</string>
    <string name="phone">Phone No:</string>
    <string name="emailId">Email ID:</string>
    <string name="changePhone">Change phone number</string>
    <string name="changePhoneDetails">Link a different phone number with your account</string>
    <string name="changePassword">Change password</string>
    <string name="changePasswordDetails">Change your email authentication password</string>
    <string name="changeEmail">Change email address</string>
    <string name="changeEmailDetails">Transfer access of your IOT devices to new credential</string>
    <string name="enterOTP">Enter OTP</string>
    <string name="manageSmartdom">Manage Smartdom</string>
    <string name="manageSmartdomDetail">Free up your Smartdom device/devices</string>
    <string name="free_smartdom_detail_text">Do you really want to free this smartdom? Doing so will permanently erase data corresponding to this central module and it will be available to connect through other account.</string>
    <string name="free_smartdom_text">Confirm free smartdom</string>
    <string name="confirm_text">Confirm</string>
    <string name="cancel_text">Cancel</string>
    <string name="edit_room_title_text">Enter room name</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="confirm_logout_detail">Are you sure you want to logout?</string>
    <string name="confirm_delete_room">Confirm delete room</string>
    <string name="confirm_delete_room_detail">Are you sure you want to delete this room? All the switchboards in this room will be transferred to stand alone list.</string>
    <string name="change_room_name">Change room name</string>
    <string name="import_from_gallery">Import from gallery</string>
    <string name="enter_manually">Enter key manually instead</string>
    <string name="connect_manually">Connect manually</string>
    <string name="switchboards">Switchboards: </string>
    <string name="profile">Profile</string>
    <string name="profile_setting_details">View or edit personal data and home photo</string>
    <string name="authentication">Authentication</string>
    <string name="authentication_settings_detail">Change phone number/password</string>
    <string name="sub_plan">My Subscription Plans</string>
    <string name="sub_plan_details">Check Or Upgrade Plans</string>
    <string name="manage_smatrtdom_settings">Manage Smartdom</string>
</resources>
