<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_drawable"
    tools:context=".SettingsModule.SettingsActivity"
    android:paddingTop="32dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/top">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings_24dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="25dp"
        android:paddingTop="3dp"
        android:gravity="left"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Profile"
        android:layout_below="@id/top"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:paddingLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_setting_details"
            android:textColor="#BDBAC1"
            android:paddingLeft="10dp"

            />
            </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authentication"
        android:layout_below="@id/Profile"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vpn_key_24dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:paddingLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication_settings_detail"
            android:textColor="#BDBAC1"
            android:paddingLeft="10dp"
            />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Subs"
        android:layout_below="@id/authentication"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_card_membership_24dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_plan"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:paddingLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_plan_details"
            android:textColor="#BDBAC1"
            android:paddingLeft="10dp"
            />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/manage"
        android:layout_below="@id/Subs"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_work_black_24dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_smatrtdom_settings"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:paddingLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manageSmartdomDetail"
            android:textColor="#BDBAC1"
            android:paddingLeft="10dp"
            />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Logout"
        android:layout_below="@id/manage"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/logoutTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:textAlignment="center"
            android:textColor="#EB5A4F"
            android:textSize="23dp"
            />

    </LinearLayout>

</RelativeLayout>
